--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@ body{
     -webkit-user-select: none; /* Chrome, Safari, Opéra depuis la version 15 */
     -ms-user-select: none; /* Internet explorer depuis la version 10 et Edge */
     user-select: none; /* Propriété standard */
+    width: 100vw;
+    height: 100vh;
 }
 .heart{
     font-size: 1.5rem;
